src/content/docs/sdk/react-native/v4/features/deep-links.mdx
---
title: Deep linking
description: Follow the guides in this section to set up deep linking.
category-title: Deep linking
slug: en/sdk/react-native/v4/features/deep-links
---

You can create deep links to take users to specific pages in your app. The Adjust SDK uses different logic depending on if the user already has your app installed on their device:

-  Direct deep linking: occurs if the user already has your app installed. The link takes the user to the page specified in the link
-  Deferred deep linking: occurs if the user doesn't have your app installed. The link takes the user to a storefront to install your app first. After the user installs the app, it opens to the page specified in the link.

The SDK can read deep link data after a user opens your app from a link.

## Set up deep linking {#set-up-deep-linking}

If a user has your app installed, it opens when they interact with a link containing deep link information. The Adjust SDK contains tools to parse deep link information for use throughout your app.

The SDK injects the required settings into Android and iOS projects in v4.30 and above. To configure deep linking, add your URL schemes in the Unity Editor inspector window.

To set up deep linking on your React Native app:

1. Set up deep linking on an app level. Follow the instructions linked below to set up deep linking on your target platform:

   -  [iOS](/en/sdk/ios/features/deep-links)
   -  [Android](/en/sdk/android/features/deep-links)

2. Refer to the [React Native documentation](https://reactnative.dev/docs/linking.html) and follow the instructions to learn how to support both platforms.
3. Use your obtained deep link URL in your JavaScript code.

## Deferred deep linking {#deferred-deep-linking}

### Disable deferred deep linking {#disable-deferred-deep-linking}

<CodeBlock title="Method signature">

```ts
public setShouldLaunchDeeplink(shouldLaunchDeeplink: boolean): void
```

</CodeBlock>

The SDK opens deferred deep links by default. You can configure this by passing a `boolean` argument to the `setShouldLaunchDeeplink` method.

```js
const adjustConfig = new AdjustConfig(
   "{YourAppToken}",
   AdjustConfig.EnvironmentSandbox,
);

adjustConfig.setShouldLaunchDeeplink(true);

Adjust.create(adjustConfig);
```

### Set up a deferred deep link delegate {#set-up-a-deferred-deep-link-delegate}

<CodeBlock title="Method signature">

```ts
public setDeferredDeeplinkCallbackListener(callback: (uri: AdjustUri) => void): void
```

</CodeBlock>

You can configure the Adjust SDK to call a delegate function when it receives a deferred deep link. This delegate function receives the deep link as a `string` argument.

```js
const adjustConfig = new AdjustConfig(
   "{YourAppToken}",
   AdjustConfig.EnvironmentSandbox,
);

adjustConfig.setDeferredDeeplinkCallbackListener(function (deeplink) {
   console.log("Deferred deep link URL content: " + deeplink);
});

Adjust.create(adjustConfig);
```

### Example {#example}

This example shows how to log a deep link address when the user opens a deferred deep link.

```js
var LogDeepLink = function (deeplinkURL) {
   console.log("Deeplink URL: " + deeplinkURL);
};

const adjustConfig = new AdjustConfig(
   "{YourAppToken}",
   AdjustConfig.EnvironmentSandbox,
);
adjustConfig.setDeferredDeeplinkCallbackListener(LogDeepLink);

Adjust.create(adjustConfig);
```

## Reattribution via deep links {#reattribution-via-deep-links}

<CodeBlock title="Method signature">

```ts
appWillOpenUrl: (url: string) => void
```

</CodeBlock>

Adjust enables you to run re-engagement campaigns using deep links. For more information, check out how to set up [Deep links in Campaign Lab](https://help.adjust.com/en/article/deep-links).

To reattribute your user, you need to call the `Adjust.appWillOpenUrl` method when the app receives deep link content. The Adjust SDK then looks for new attribution data within the deep link. If the SKD finds new information, it forwards the information to Adjust's servers for reattribution.

```jsx
componentDidMount() {
    Linking.addEventListener('url', this.handleDeepLink);
    Linking.getInitialURL().then((url) => {
        if (url) {
            this.handleDeepLink({ url });
        }
    })
}

componentWillUnmount() {
    Linking.removeEventListener('url', this.handleDeepLink);
}

handleDeepLink(event) {
    Adjust.appWillOpenUrl(event.url);
}
```

## Enable LinkMe {#enable-linkme}

<CodeBlock title="Method signature">

```js
public setLinkMeEnabled(linkMeEnabled: boolean): void
```

</CodeBlock>

The Adjust SDK lets you copy deep link information from the device pasteboard. When combined with Adjust’s LinkMe solution, this feature enables deferred deep linking on devices running iOS 15 and above.

<Callout type="important">

The Adjust SDK checks the pasteboard when a user opens the app for the first time. The device displays a dialog asking if the user wants to allow the app to read the pasteboard.

</Callout>

When a user clicks on a LinkMe URL they have the option to copy the link information to their system pasteboard. You can use the Adjust SDK to read the system pasteboard for deep link information. If deep link information is present, the SDK forwards the user to the correct page in your app.

To enable pasteboard checking in your app, pass a `true` value to the `setLinkMeEnabled` method on your config object:

```js
const adjustConfig = new AdjustConfig(
   "{YourAppToken}",
   AdjustConfig.EnvironmentSandbox,
);

adjustConfig.setLinkMeEnabled(true);

Adjust.create(adjustConfig);
```
